--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,16 @@
 <head>
 	<meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.typekit.net/amx2oxy.css">
 	<link rel="stylesheet" href="/css/style.css" type="text/css" />
 	<title>Eat-Da-Burger!</title>
-	<script src="../../public/js/script.js"></script>
+	<script src="/js/script.js"></script>
 </head>
 
 <body>
 	{{{ body }}}
+
+    <p class="footer-text">Made with ❤ by <a href="https://ferwicker.github.io/portfolio/" target="_blank">Fer Wicker</a>.</p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
