Finishing up layout, devoured burgers styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,15 @@ h1 {
     margin-bottom: 40px;
 }
 
+a {
+    color: #383838;
+}
+
+a:hover {
+    color: #b20000;
+    transition: .3s all ease;
+}
+
 .burger-image {
     height: 200px;
     margin-bottom: 20px;
