front end js functionality, fixing issues in controller file and minron adjustments to index id's

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,8 +31,8 @@
         </div>
     </div>
     <div class="d-flex flex-column justify-content-center align-items-center">
-        <form class="d-flex flex-column align-items-center" style="margin-top: 40px;">
-            <input class="form-input" type="text">
+        <form id="burgerForm" class="d-flex flex-column align-items-center" style="margin-top: 40px;">
+            <input id="burger-input" class="form-input" type="text">
             <input class="submit-button" type="submit" value="Submit">
         </form>
     </div>
