--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,8 @@
         </div>
     </div>
     <div class="d-flex flex-column justify-content-center align-items-center">
-        <form id="burgerForm" class="d-flex flex-column align-items-center" style="margin-top: 40px;">
+        <p class="form-instruction">Add a burger to devour!<p>
+        <form id="burgerForm" class="d-flex flex-column align-items-center">
             <input id="burger-input" class="form-input" type="text">
             <input class="submit-button" type="submit" value="Submit">
         </form>
